correction alignement du titre page mood

--- a/src/components/Mood/Mood.css
+++ b/src/components/Mood/Mood.css
@@ -24,7 +24,8 @@
     font-family: 'Spartan', sans-serif;
     font-weight: 500;
     margin-bottom:50px;
-    white-space:no-wrap;
+    white-space:nowrap;
+    text-align: center;
 
 }
 
